[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "torchlearn"
version = "0.1.0"
authors = [
    {name = "Juan Manuel Pérez", email = "jmperez.85@gmail.com"},
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "torchlearn",
]

[tool.pdm]
distribution = true
